<resources>
    <string name="app_name" translatable="false">Hospital</string>

    <!--  Splash And Login -->
    <string name="loading">Loading ...</string>


    <!-- HR - Create New User   -->
    <string-array name="spinnergender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="spinnerspecialist">
        <item>Specialist</item>
        <item>Doctor</item>
        <item>Nurse</item>
        <item>Receptionist</item>
        <item>Manger</item>
        <item>Laboratory Physician</item>
        <item>Hr</item>
    </string-array>


    <string-array name="spinnerstatus">
        <item>Status</item>
        <item>Single</item>
        <item>Married</item>
    </string-array>

<!--    <string-array name="bloodpressure">-->
<!--        <item>LESS THAN 120</item>-->
<!--        <item>120 - 129</item>-->
<!--        <item>130 - 139</item>-->
<!--        <item>140 OR HIGHER</item>-->
<!--        <item>HIGHER THAN 180</item>-->
<!--    </string-array>-->

    <string name="welcome_back">Welcome back !</string>
    <string name="to_continue_login_now">To Continue , Login Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="employee">Employee</string>
    <string name="tasks">Tasks</string>
    <string name="reports">Reports</string>
    <string name="attendance_leaving">Attendance - Leaving</string>
    <string name="search_for_employee">Search for Employee</string>
    <string name="new_user">New User</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">E-mail</string>
    <string name="address">Address</string>
    <string name="my_profile">My Profile</string>


    <!--  Validation Errors  -->
    <string name="required">required</string>
    <string name="select_gender_type">Select Gender Type</string>
    <string name="select_specialist_type">Select Specialist Type</string>
    <string name="select_status_type">Select Status Type</string>
    <string name="enter_the_email_correctly">Enter the email correctly</string>
    <string name="phone_length">Phone Number Must be 11 character</string>
    <string name="name_length_at_least_two">Name Must be at Least 2 Characters</string>
    <string name="password_length">Password Must be at least 8 character</string>
    <string name="_loading">Loading...</string>

    <!--  Receptionist Create Call  -->
    <string name="calls">Calls</string>
    <string name="create_call">Create Call</string>
    <string name="patient_name">Patient Name</string>
    <string name="age">Age</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="case_description">Case Description</string>
    <string name="send_call">Send Call</string>

    <!--  Receptionist Case Details  -->
    <string name="case_details">Case Details</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="button_status_is_loggedout">Case has been logged out</string>
    <string name="button_status_is_active">Logout</string>
    <string name="cases">Cases</string>
    <string name="accept">Accept</string>
    <string name="show_details">Show Details</string>

    <string name="for_test" translatable="false">Details note Lorem Ipsum is simply dummy
text of the printing and typesetting industry.
Lorem Ipsum has been the industrys</string>

    <string name="nurse_request_content">You have a new request from the doctor, please
 follow up and implement the request as soon as
 possible</string>

    <string name="select_nurse">Select Nurse</string>
    <string name="finished">Finished</string>
    <string name="proceess">Proceess</string>
    <string name="add_measurement">Add Measurement</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="sugar_analysis">Sugar analysis</string>
    <string name="add_note">Add Note</string>

</resources>