<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Fragments.Receptionist.CaseDetails.CaseDetailsFragment">

    <!--  Pinned Values  -->
    <ImageView
        android:id="@+id/caseDetails_BackArrow_IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/case_details"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/caseDetails_BackArrow_IV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/caseDetails_BackArrow_IV" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_26sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/patient_name"
        android:textColor="@color/case_details_grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/caseDetails_BackArrow_IV"
        app:layout_constraintTop_toBottomOf="@+id/caseDetails_BackArrow_IV" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/age"
        android:textColor="@color/case_details_grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/caseDetails_BackArrow_IV"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/phone_number"
        android:textColor="@color/case_details_grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/caseDetails_BackArrow_IV"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/date"
        android:textColor="@color/case_details_grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/caseDetails_BackArrow_IV"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/status"
        android:textColor="@color/case_details_grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/caseDetails_BackArrow_IV"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/case_description"
        android:textColor="@color/case_details_grey"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/caseDetails_BackArrow_IV"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


    <!--  Changed Values  -->

    <TextView
        android:id="@+id/caseDetails_PatientName_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/materialButton2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:text="Ebrahem Khaled" />

    <TextView
        android:id="@+id/caseDetails_Age_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/materialButton2"
        app:layout_constraintTop_toTopOf="@id/textView7"
        tools:text="25" />


    <TextView
        android:id="@+id/caseDetails_PhoneNum_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/materialButton2"
        app:layout_constraintTop_toTopOf="@id/textView8"
        tools:text="015924364726" />

    <TextView
        android:id="@+id/caseDetails_Date_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/materialButton2"
        app:layout_constraintTop_toTopOf="@id/textView9"
        tools:text="24.05.2022" />


    <ImageView
        android:id="@+id/caseDetails_StatusIcon_IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/materialButton2"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        tools:src="@drawable/ic_green_mark" />

    <TextView
        android:id="@+id/caseDetails_StatusProcess_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/caseDetails_StatusIcon_IV"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        tools:text="Process" />

    <TextView
        android:id="@+id/caseDetails_Description_TV"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:text="Details note : Lorem Ipsum is simply dummy
text of the printing and typesetting industry.
Lorem Ipsum has been the industry's " />

    <!--  Changed Values  -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:elevation="0dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical|center_horizontal"
        android:paddingVertical="@dimen/_8sdp"
        android:textAllCaps="false"
        android:textSize="@dimen/_11ssp"
        android:visibility="invisible"
        app:cornerRadius="8dp"
        app:elevation="0dp"
        app:iconGravity="textEnd"
        app:iconSize="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home_indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>