<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.Fragments.Receptionist.RecepHome.ReceptionistHomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_IV"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/receptionist_userImg_IV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:src="@drawable/doctor" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/receptionist_userName_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textColor="@color/black"
        android:layout_marginTop="-4dp"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toEndOf="@+id/cardView_IV"
        app:layout_constraintTop_toTopOf="@+id/cardView_IV"
        tools:text="Ebrahem Elzainy" />

    <TextView
        android:id="@+id/receptionist_userSpecialist_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main_color_Green"
        android:textSize="@dimen/_10ssp"
        android:layout_marginBottom="-4dp"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toBottomOf="@+id/cardView_IV"
        app:layout_constraintStart_toEndOf="@+id/cardView_IV"
        tools:text="Specialist , HR" />

    <ImageView
        android:id="@+id/specialist_Notification_IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginEnd="14dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/receptionist_Calls_Card"
        android:layout_width="163dp"
        android:layout_height="193dp"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_112sdp"
        android:backgroundTint="@color/calls_card"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_calls"
                app:layout_constraintBottom_toTopOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:text="@string/calls"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!--  ********** -->

    <androidx.cardview.widget.CardView
        android:id="@+id/receptionist_Tasks_Card"
        android:layout_width="163dp"
        android:layout_height="158dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="@dimen/_13sdp"
        android:backgroundTint="@color/tasks_card"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/receptionist_Calls_Card"
        app:layout_constraintTop_toTopOf="@+id/receptionist_Calls_Card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_frame_tasks"
                app:layout_constraintBottom_toTopOf="@+id/textView33"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="31dp"
                android:text="@string/tasks"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!-- ******* -->

    <androidx.cardview.widget.CardView
        android:id="@+id/receptionist_Reports_Card"
        android:layout_width="163dp"
        android:layout_height="158dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="@color/reports_card"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="@+id/receptionist_Calls_Card"
        app:layout_constraintTop_toBottomOf="@+id/receptionist_Calls_Card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_frame_reports"
                app:layout_constraintBottom_toTopOf="@+id/textView88"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/textView88"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="31dp"
                android:text="@string/reports"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- ******* -->

    <androidx.cardview.widget.CardView
        android:id="@+id/receptionist_AttLeav_Card"
        android:layout_width="163dp"
        android:layout_height="192dp"
        android:backgroundTint="@color/attendance_leaving_card"
        android:layout_marginTop="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/receptionist_Reports_Card"
        app:layout_constraintTop_toBottomOf="@+id/receptionist_Tasks_Card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_frame_attendance"
                app:layout_constraintBottom_toTopOf="@+id/textView99"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/textView99"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:text="@string/attendance_leaving"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home_indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>